hphp/test/zend/good/ext/iconv/tests/bug37773.php.skipif
<?php 
include('skipif.inc'); 

$test = @iconv_strpos("abbttt","ttt",0,"UTF-8");
if ($test === false) {
	die("skip UTF-8 is not supported?");
}

?>