hphp/test/zend/bad/ext/xml/tests/bug32001b.php.skipif
<?php
require_once("skipif.inc");
if (!extension_loaded('iconv')) die ("skip iconv extension not available");
foreach(array('EUC-JP', 'Shift_JISP', 'GB2312') as $encoding) {
	if (@xml_parser_create($encoding) === false) die("skip libxml2 does not support $encoding encoding");
}
?>